src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Revenue_Graphic__c</fullName>
        <description>Greater than (or equal to) 100,000 = One Dollar image
Greater than (or equal to) 500,000 = Two Dollar image
Greater than (or equal to) 1,000,000 = Three Dollar image Greater than (or equal to) 2,000,000 = Four Dollar image Greater than (or equal to) 5,000,000 = Five Dollar image</description>
        <formula>/*** **
Begin the check for Annual Revenue value and set the following: Greater than (or equal to) 100,000 = One Dollar image Greater than (or equal to) 500,000 = Two Dollar image Greater than (or equal to) 1,000,000 = Three Dollar image Greater than (or equal to) 2,000,000 = Four Dollar image Greater than (or equal to) 5,000,000 = Five Dollar image
***/
IF( AnnualRevenue &gt; 99999, IMAGE(&quot;/resource/1407443437000/money_dollar&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)
&amp;
IF( AnnualRevenue &gt; 499999, IMAGE(&quot;/resource/1407443437000/money_dollar&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)
&amp;
IF( AnnualRevenue &gt; 999999, IMAGE(&quot;/resource/1407443437000/money_dollar&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)
&amp;
IF( AnnualRevenue &gt; 1999999, IMAGE(&quot;/resource/1407443437000/money_dollar&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)
&amp;
IF( AnnualRevenue &gt; 4999999, IMAGE(&quot;/resource/1407443437000/money_dollar&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)</formula>
        <inlineHelpText>1 Dollar image = 100,000 or more
2 Dollar images = 500,000 or more
3 Dollar images = 1,000,000 or more 4 Dollar images = 2,000,000 or more 5 Dollar images = 5,000,000 or more</inlineHelpText>
        <label>Account Revenue Graphic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>